add new project

--- a/index.html
+++ b/index.html
@@ -429,6 +429,17 @@
 				</div>
 			  </div>
 			</div>
+			<div class="col-md-4 d-flex ftco-animate">
+				<div class="blog-entry justify-content-end">
+				<a href="https://github.com/abzaidi/studybud/" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/ss.png');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+  
+				  <h3 class="heading"><a href="https://github.com/abzaidi/studybud/" target="_blank">StudyBud - An application to study together</a></h3>
+				  <p>Django · Python (Programming Language) · Django REST Framework · SQLite · Application Programming Interfaces (API)</p>
+				</div>
+			  </div>
+			</div>
 		 </div>
 	  </div>
     </section>
