--- a/index.html
+++ b/index.html
@@ -409,12 +409,12 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/abzaidi/ATM-winForm-Application-in-Csharp" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/atm.png');">
+				<a href="https://github.com/qerberos-code/aiml_api/" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/cyber.PNG');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/abzaidi/ATM-winForm-Application-in-Csharp" target="_blank">ATM Application</a></h3>
-				  <p>C# · Object-Oriented Programming (OOP) · .NET Framework</p>
+				  <h3 class="heading"><a href="https://github.com/qerberos-code/aiml_api/" target="_blank">AI-Powered Cybersecurity Prototype for End Point Detection</a></h3>
+				  <p>Large Language Models (LLM) · Cybersecurity · Artificial Intelligence (AI) · LLaMA · Phi-3 · HuggingFace · streamlit</p>
 				</div>
 			  </div>
 			</div>
