--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="./AbubakarZaidiResume.pdf" download class="btn btn-primary py-4 px-5">Download Resume</a></p>
+    				<p><a href="https://drive.google.com/file/d/1KWwU-qBEiABephd69buYcUaTCOECdsqf/view?usp=sharing" target="_blank" download class="btn btn-primary py-4 px-5">Download Resume</a></p>
     			</div>
     		</div>
     	</div>
@@ -544,7 +544,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="./AbubakarZaidiResume.pdf" download>resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1KWwU-qBEiABephd69buYcUaTCOECdsqf/view?usp=sharing" target="_blank" download>resumelink</a></p>
 	          </div>
           </div>
 
